public enum EngineState {
    STOPPED,
    STARTED
}
