public enum FuelType {
    PETROL,
    DIESEL, 
    ELECTRIC,
    KEROSENE,
    NONE
}
