public interface HasEngine {
    void setEngine(Engine engine);
}
