public enum TransportType {
    CAR,
    AIRPLANE,
    SHIP,
    BICYCLE
}
